Changed the last commit description

--- a/index.html
+++ b/index.html
@@ -6,5 +6,8 @@
 </head>
 <body>
    <h1>Our sample page body</h1>
+    <p>
+      We are just starting to understand git!!
+     </p>
 </body>
 </html>
