--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
 <body>
    <h1>We are excited to learn git today</h1>
     <p>
-      We are just starting to understand git!!
+      Hello there!! We added this file from remote.
      </p>
 </body>
 </html>
