Added p from local

--- a/about.html
+++ b/about.html
@@ -9,8 +9,8 @@
     <p>
       Hello there!! We added this file from remote. A new paragraph of text.
      </p>
-   <h2>
-      This line was added from editor through github
-   </h2>
+<p>
+   A new para added from local
+ </p>
 </body>
 </html>
